<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosExtra">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/titleDatosExtra"
                android:textColor="#9C070606"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/subDatosExtra"
                android:gravity="center_horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_centerInParent="true"
                    >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titleRadioGroup" />

                    <RadioButton
                        android:id="@+id/RbPrimarioIncompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvRadioButtonOpcion1" />

                    <RadioButton
                        android:id="@+id/RbPrimarioCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvRadioButtonOpcion2" />

                    <RadioButton
                        android:id="@+id/RbSecundarioIncompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvRadioButtonOpcion3" />

                    <RadioButton
                        android:id="@+id/RbSecundarioCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvRadioButtonOpcion4" />

                    <RadioButton
                        android:id="@+id/RbOtros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvRadioButtonOpcion5" />
                </RadioGroup>

            </RelativeLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/tvTextoCheckBox"
                android:gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <CheckBox
                        android:id="@+id/chkMusica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/tvCheckBoxOpcion2"
                        />

                    <CheckBox
                        android:id="@+id/chkTecnologia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tvCheckBoxOpcion4"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <CheckBox
                        android:id="@+id/chkDeporte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/tvCheckBoxOpcion1"
                        />

                    <CheckBox
                        android:id="@+id/chkArte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/tvCheckBoxOpcion3"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRecibirInformacion"
                    android:layout_marginRight="15dp"
                    />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSi"
                    />

            </LinearLayout>


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="Guardar"
                android:text="@string/btnGuardar" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>