<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTituloFormularioContacto"
                android:textSize="24sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/txt_parrafo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTextoFormulario"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="55dp" />

            <TextView
                android:id="@+id/lbl_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintNombre"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="177dp" />

            <EditText
                android:id="@+id/txt_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintNombre"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="196dp" />

            <TextView
                android:id="@+id/lbl_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintApellido"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="110dp" />

            <EditText
                android:id="@+id/txt_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintApellido"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="132dp" />

            <TextView
                android:id="@+id/lbl_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintTelefono"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="241dp" />

            <EditText
                android:id="@+id/txt_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintTelefono"
                android:inputType="number"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="260dp" />

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintEmail"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="307dp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="326dp" />

            <TextView
                android:id="@+id/lbl_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintDireccion"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="371dp" />

            <EditText
                android:id="@+id/txt_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintDireccion"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="390dp" />

            <TextView
                android:id="@+id/lbl_fechanac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintFechaNacimiento"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="436dp" />

            <EditText
                android:id="@+id/date_fechanac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintFechaNacimiento"
                android:inputType="date"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="457dp" />

            <Button
                android:id="@+id/btn_guardarContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="agregarContactos"
                android:text="@string/btnContinuar"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="508dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>